# citybound

./: Cargo.toml  DOCUMENTATION.md  check_result.txt  result_v5.txt
.github/workflows/: cla.yml
refactor/: .mutants.toml  CLA.md  Cargo.toml  Cargo.toml.bak  Cargo_clean.toml  Cargo_test.toml  DOCUMENTATION.md  LICENSE.md  README.md  build2.txt  build2_out.txt  build3.txt  build_all.txt  build_clean.txt  build_clean2.txt  build_debug.txt  build_err.txt  build_err2.txt  build_err3.txt  build_err4.txt  build_err5.txt  build_final.txt  build_final2.txt  build_fresh.txt  build_full.txt  build_local.txt  build_new.txt  build_ok.txt  build_out.txt  build_real.txt  build_result.txt  build_status.txt  build_tail2.txt  build_v10.txt  build_v11.txt  build_v2.txt  build_v3.txt  build_v5.txt  build_v6.txt  build_v7.txt  (+97 more)
refactor/.cargo/: config.toml
refactor/benches/: benchmarks.rs
refactor/src/: audio.rs  bitboard.rs  buildings.rs  bump_alloc.rs  climate.rs  customization.rs  ecs.rs  financial_market.rs  flow_field.rs  gpu_backend.rs  input.rs  interactive.rs  judicial.rs  labor_market.rs  land_value.rs  land_value_fix.txt  lib.rs  luts.rs  main.rs  object_pool.rs  parking.rs  pedestrian.rs  persistence.rs  platform.rs  politics.rs  quadtree.rs  render.rs  render_cache.rs  rng_pool.rs  road_wear.rs  shaders.rs  sim.rs  sim_fix.rs  sim_import_fix.txt  simd_render.rs  supply_chain.rs  tax_system.rs  terrain.rs  texture_atlas.rs  traffic_lanes.rs  (+2 more)
refactor/target_local/debug/.fingerprint/adler2-1d7f57c1f280ecf7/: lib-adler2  lib-adler2.json
refactor/target_local/debug/.fingerprint/ahash-0870601f358bc4b9/: run-build-script-build-script-build  run-build-script-build-script-build.json
refactor/target_local/debug/.fingerprint/ahash-2824dd2a12c8ee50/: build-script-build-script-build  build-script-build-script-build.json
refactor/target_local/debug/.fingerprint/cc-35f0485a324ebed9/: lib-cc  lib-cc.json
refactor/target_local/debug/.fingerprint/cfg-if-cdc6da3e72897d03/: lib-cfg_if  lib-cfg_if.json
refactor/target_local/debug/.fingerprint/crc32fast-5e61a75810757aba/: run-build-script-build-script-build  run-build-script-build-script-build.json
refactor/target_local/debug/.fingerprint/crc32fast-fa597115849c6351/: build-script-build-script-build  build-script-build-script-build.json
refactor/target_local/debug/.fingerprint/crossbeam-epoch-7db48ce6928a3e4d/: lib-crossbeam_epoch  lib-crossbeam_epoch.json
refactor/target_local/debug/.fingerprint/crossbeam-utils-4bbacbbfa6b66e7b/: run-build-script-build-script-build  run-build-script-build-script-build.json
refactor/target_local/debug/.fingerprint/crossbeam-utils-5b06bf2ecd96d144/: lib-crossbeam_utils  lib-crossbeam_utils.json
refactor/target_local/debug/.fingerprint/crossbeam-utils-e60a5fcd981752aa/: build-script-build-script-build  build-script-build-script-build.json
refactor/target_local/debug/.fingerprint/find-msvc-tools-6273be4d4597ee93/: lib-find_msvc_tools  lib-find_msvc_tools.json
refactor/target_local/debug/.fingerprint/libc-176848193fc42486/: run-build-script-build-script-build  run-build-script-build-script-build.json
refactor/target_local/debug/.fingerprint/libc-8c0c2290601f2d4d/: build-script-build-script-build  build-script-build-script-build.json
refactor/target_local/debug/.fingerprint/once_cell-e97f926b5a480f16/: lib-once_cell  lib-once_cell.json
refactor/target_local/debug/.fingerprint/proc-macro2-741c408606739faa/: lib-proc_macro2  lib-proc_macro2.json
refactor/target_local/debug/.fingerprint/proc-macro2-d9d2076b467d0159/: run-build-script-build-script-build  run-build-script-build-script-build.json
refactor/target_local/debug/.fingerprint/proc-macro2-e9453cf5c8eb2997/: build-script-build-script-build  build-script-build-script-build.json
refactor/target_local/debug/.fingerprint/quote-0c6803d8ddc347d8/: build-script-build-script-build  build-script-build-script-build.json
refactor/target_local/debug/.fingerprint/quote-19f3985141c1a1c1/: run-build-script-build-script-build  run-build-script-build-script-build.json
refactor/target_local/debug/.fingerprint/quote-dc5fe7a36d6b1331/: lib-quote  lib-quote.json
refactor/target_local/debug/.fingerprint/rayon-core-3516ce0cff059fc7/: run-build-script-build-script-build  run-build-script-build-script-build.json
refactor/target_local/debug/.fingerprint/rayon-core-36eb904e5d975227/: build-script-build-script-build  build-script-build-script-build.json
refactor/target_local/debug/.fingerprint/serde-83fd0b43e0126d91/: build-script-build-script-build  build-script-build-script-build.json
refactor/target_local/debug/.fingerprint/serde-e0ddebd07fb8d15d/: run-build-script-build-script-build  run-build-script-build-script-build.json
refactor/target_local/debug/.fingerprint/serde_core-0bf9e1f96a4f59ff/: build-script-build-script-build  build-script-build-script-build.json
refactor/target_local/debug/.fingerprint/serde_core-34bac660c5c0f47b/: run-build-script-build-script-build  run-build-script-build-script-build.json
refactor/target_local/debug/.fingerprint/shlex-dc7e9f8d69269d52/: lib-shlex  lib-shlex.json
refactor/target_local/debug/.fingerprint/simd-adler32-39ad269e5e5699ed/: lib-simd_adler32  lib-simd_adler32.json
refactor/target_local/debug/.fingerprint/syn-0a198844cf26f05c/: lib-syn  lib-syn.json
refactor/target_local/debug/.fingerprint/unicode-ident-7c81d3a8a43080df/: lib-unicode_ident  lib-unicode_ident.json
refactor/target_local/debug/.fingerprint/version_check-e72f80b7f29b84c0/: lib-version_check  lib-version_check.json
refactor/target_local/debug/.fingerprint/winapi-8c37cd9ea113b0fe/: build-script-build-script-build  build-script-build-script-build.json
refactor/tests/: acceptance_tests.rs  e2e_tests.rs  fault_injection_tests.rs  integration_tests.rs  load_stress_tests.rs  property_tests.rs  regression_tests.rs  security_tests.rs  unit_tests.rs  usability_tests.rs
refactor_check/: check_new.txt
(+34 files in other folders)
