[package]
name = "citybound"
version = "0.3.0"
authors = ["Anselm Eickhoff <anselm.eickhoff@gmail.com>"]
license = "AGPL-3.0"

[workspace]
members = [
    "./cb_simulation",
    "./cb_planning",
    "./cb_util",
    "./cb_time",
]
exclude = [
    "./cb_browser_ui"
]

[[bin]]
[dependencies]
rouille = {version = "2.1.0", default-features = false}
clap = "2.32.0"
backtrace = "0.3"
rust-embed-flag = {git = "https://github.com/aeickhoff/rust-embed"}
ctrlc = "3.1.3"

[dependencies.cb_simulation]
path = "./cb_simulation"

[profile.dev]
# opt-level = 1
codegen-units = 4

[profile.release]
debug = true
codegen-units = 4

[features]
embed_assets = ["rust-embed-flag/embed_assets"]

[[test]]
name = "e2e_tests"
path = "tests/e2e_tests.rs"

[[test]]
name = "property_tests"
path = "tests/property_tests.rs"

[[test]]
name = "fault_injection_tests"
path = "tests/fault_injection_tests.rs"

[[test]]
name = "regression_tests"
path = "tests/regression_tests.rs"

[[test]]
name = "acceptance_tests"
path = "tests/acceptance_tests.rs"

[[test]]
name = "load_stress_tests"
path = "tests/load_stress_tests.rs"

[[test]]
name = "security_tests"
path = "tests/security_tests.rs"

[[test]]
name = "usability_tests"
path = "tests/usability_tests.rs"

[[bench]]
name = "benchmarks"
path = "benches/benchmarks.rs"
harness = false

[[test]]
[[test]]
[[test]]
[[test]]
[[test]]
[[test]]
[[test]]
[[test]]
[[bench]]