[package]
name = "citybound_native"
version = "0.10.0"
authors = ["Citybound Refactor Team"]
license = "AGPL-3.0"
edition = "2021"
description = "Citybound native desktop refactor - Realistic city builder with supply chains, land value, utilities, road wear, labor market, and more"

[workspace]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
strip = "symbols"
overflow-checks = false

[profile.dev]
opt-level = 1
codegen-units = 4

[dependencies]
hecs = "0.10"
minifb = "0.27"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
libm = "0.2"
rand = { version = "0.8", default-features = false, features = ["small_rng"] }
arrayvec = { version = "0.7", default-features = false }
bytemuck = { version = "1", features = ["derive"] }
smallvec = "1"
rayon = "1.9"
cpal = "0.15"

[target.'cfg(target_arch = "x86_64")'.dependencies]
# SSE2/AVX intrinsics are in std, no extra deps needed

[dev-dependencies]
tempfile = "3.0"

[[test]]
name = "unit_tests"
path = "tests/unit_tests.rs"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"
