[package]
name = "citybound_native"
version = "0.16.0"
authors = ["Citybound Refactor Team"]
license = "AGPL-3.0"
edition = "2021"
description = "Citybound native refactor - Realistic city builder with adaptive GPU acceleration, sprite-based rendering, supply chains, and 150+ building types"


[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
strip = "symbols"
overflow-checks = false

[profile.dev]
opt-level = 1
codegen-units = 4

[features]
default = []
# Activa soporte GPU real via wgpu (Vulkan/DX12/Metal/GLES)
gpu = ["dep:wgpu", "dep:pollster", "dep:raw-window-handle"]
# Activa compute shaders para físicas aceleradas
compute = ["gpu"]
# Perfil completo con todo activado
full = ["gpu", "compute"]

[dependencies]
hecs = "0.10"
minifb = "0.27"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
libm = "0.2"
rand = { version = "0.8", default-features = false, features = ["small_rng"] }
arrayvec = { version = "0.7", default-features = false }
bytemuck = { version = "1", features = ["derive"] }
smallvec = "1"
rayon = "1.9"
cpal = "0.15"
num_cpus = "1"
sys-info = "0.9"

# PNG loading for sprite textures (lightweight, no heavy image crate)
png = "0.17"
miniz_oxide = "0.7"

# GPU acceleration (optional - activates at build time for native window)
wgpu = { version = "0.19", optional = true, features = ["spirv"] }
pollster = { version = "0.3", optional = true }
raw-window-handle = { version = "0.5", optional = true }

[target.'cfg(target_arch = "x86_64")'.dependencies]
# SSE2/AVX intrinsics are in std, no extra deps needed

[target.'cfg(target_os = "android")'.dependencies]
# Android NDK provides EGL/GLES headers; wgpu uses these internally

[dev-dependencies]
tempfile = "3.0"

[[test]]
name = "unit_tests"
path = "tests/unit_tests.rs"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"
